# Speedometer

./: CMakeLists.txt  README.md  fonts.h  speedometer.c  speedometerAlarms.c  speedometerAlarms.h  speedometerDisplay.c  speedometerDisplay.h  speedometerMemory.c  speedometerMemory.h  speedometerStateHandlers.c  speedometerStateHandlers.h  ssd1306.c  ssd1306.h
CAD files/: speedometer - enclosure bottom.stl  speedometer - enclosure top.stl
